--- a/index.html
+++ b/index.html
@@ -22,17 +22,23 @@
 </head>
 
 <body>
+  
+  <div id="nav">
+    <a href="#" onclick="SpicedTofu.displayRecipe();">Spiced Tofu</a>
+    <a href="#">Recipe 2</a>
+    <a href="#">Recipe 3</a>
+  </div>
 
   <div id="titleBanner">
-    <h1 id="title" class="title">Breaded, Fried, Softly Spiced Tofu</h1>
-    <h2>
-      Contributed by: Rae Kolke
-    </h2>
+    <h1 id="title" class="title"></h1>
+    <h2></h2>
   </div>
   
   <h3>"Mouth-watering, Tangy, and Delicious!"</h3>
 
-  <img id="image" src="tp4-image.jpg">
+  <div id="picture">
+  <img id="image">
+  </div>
 
   <div id="ingredients">
   </div>
