adding second recipe

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
   <div id="nav">
     <a href="#" onclick="SpicedTofu.displayRecipe();">Spiced Tofu</a>
-    <a href="#">Recipe 2</a>
+    <a href="#" onclick="chicken.displayRecipe();">Lemon Picatta Chicken</a>
     <a href="#">Recipe 3</a>
   </div>
 
@@ -33,8 +33,6 @@
     <h1 id="title" class="title"></h1>
     <h2></h2>
   </div>
-  
-  <h3>"Mouth-watering, Tangy, and Delicious!"</h3>
 
   <div id="picture">
   <img id="image">
