added final recipe

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id="nav">
     <a href="#" onclick="SpicedTofu.displayRecipe();">Spiced Tofu</a>
     <a href="#" onclick="chicken.displayRecipe();">Lemon Picatta Chicken</a>
-    <a href="#">Recipe 3</a>
+    <a href="#" onclick="burger.displayRecipe();">Mini Burgers</a>
   </div>
 
   <div id="titleBanner">
